# slopstag

./: .gitignore  CLAUDE.md  README.md  main.py  plan.md  pyproject.toml  requirements.txt
docs/: API.md  ARCHITECTURE.md  HISTORY_SYSTEM.md  TESTING.md  TOOLS.md  VECTOR_RENDERING.md
frontend/css/: main.css
frontend/css/components/: floating-panel.css
frontend/css/modes/: limited.css  tablet.css
frontend/css/themes/: dark.css  light.css
frontend/js/: app.js
frontend/js/config/: ActionRegistry.js  ThemeManager.js  UIConfig.js
frontend/js/core/: BlendModes.js  Clipboard.js  Document.js  DocumentManager.js  EffectRenderer.js  History.js  Layer.js  LayerEffects.js  LayerStack.js  Renderer.js  TextLayer.js  VectorLayer.js  VectorShape.js
frontend/js/core/shapes/: EllipseShape.js  LineShape.js  PathShape.js  PolygonShape.js  RectShape.js
frontend/js/data/: BrushPresets.js
frontend/js/effects/: BevelEmbossEffect.js  ColorOverlayEffect.js  DropShadowEffect.js  InnerGlowEffect.js  InnerShadowEffect.js  LayerEffect.js  OuterGlowEffect.js  StrokeEffect.js  index.js
frontend/js/plugins/: BackendConnector.js  PluginManager.js
frontend/js/tests/: test-rasterize-layer.js  test-text-tool.js  test-vector-layers.js
frontend/js/tools/: BlurTool.js  BrushTool.js  BurnTool.js  CircleTool.js  CloneStampTool.js  CropTool.js  DodgeTool.js  EraserTool.js  EyedropperTool.js  FillTool.js  GradientTool.js  HandTool.js  LassoTool.js  LineTool.js  MagicWandTool.js  MoveTool.js  PenTool.js  PencilTool.js  PolygonTool.js  RectTool.js  SelectionTool.js  ShapeTool.js  SharpenTool.js  SmudgeTool.js  SpongeTool.js  SprayTool.js  TextTool.js  Tool.js  ToolManager.js  VectorShapeEditTool.js
frontend/js/ui/: ActionDispatcher.js  ColorPicker.js  FloatingPanel.js  LayerPanel.js  PropertyPanel.js  StatusBar.js  ToolPanel.js  Toolbar.js  Window.js
frontend/js/utils/: BrushCursor.js  EventBus.js  ImageData.js
null/: envs.toml
slopstag/: __init__.py  app.py  canvas_editor.js  canvas_editor.py  config.py
slopstag/api/: filters.py  images.py  rendering.py  router.py  sessions.py
slopstag/effects/: __init__.py  base.py  bevel_emboss.py  color_overlay.py  drop_shadow.py  inner_glow.py  inner_shadow.py  outer_glow.py  stroke.py
slopstag/filters/: artistic.py  base.py  blur.py  color.py  edge.py  morphology.py  noise.py  registry.py  sharpen.py  threshold.py
slopstag/images/: providers.py  skimage_samples.py
slopstag/plugins/: manager.py
slopstag/rendering/: __init__.py  document.py  lanczos.py  text.py  vector.py
slopstag/sessions/: __init__.py  manager.py  models.py
tests/: __init__.py  conftest.py  test_api.py  test_clipboard.py  test_layer_effects.py  test_layers.py  test_rendering_parity.py  test_rendering_parity_integration.py  test_rendering_parity_playwright.py  test_tools_brush_eraser.py  test_tools_painting.py  test_tools_selection.py  test_tools_shapes.py  test_ui_brush_preset.py  test_vector_layer_bounds.py  test_vector_layers.py  test_vector_parity.py
tests/helpers/: __init__.py  assertions.py  editor.py  layers.py  pixels.py  selection.py  tools.py
